css/raw/global.css
/* ... */
.redo-icon {
	background: url('https://cdn.rawgit.com/incace/matFlow/8b045097/assets/redo.svg');
	background-size: 24px;
	background-position: center center;
	background-repeat: no-repeat;
}
.undo-button.enabled:hover,
.redo-button.enabled:hover {
	opacity: 1 !important;
	background: none !important;
}
.undo-button.enabled:hover {
	-webkit-transform: rotate(-360deg);
	transform: rotate(-360deg);
}
.redo-button.enabled:hover {
	-webkit-transform: rotate(360deg);
	transform: rotate(360deg);
}
.topBarButtonTextContainer {
	line-height: 24px !important;
}
#backgroundImage {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	opacity: 1;
	background-image: none !important;
	background-color: #2B2E2F;
}
@media screen and (min-device-width:1501px) {
	#backgroundImage {
		background-image: none !important;
		background-color: #2B2E2F;
	}
}
.contentBold {
    font-weight: 700;
}
.highlight {
	height: 100%;
	left: -5px;
	padding: 2px 5px 1px;
	position: absolute;
	top: 2px;
	width: 100%;
}
.moving > .highlight,
.highlighted > .highlight {
	background: #1e1e1e !important;
}
.moving > .highlight,
.highlighted.moveHovered > .highlight {
	background: #1e1e1e !important;
}
.notes > .content {
	color: #8d9398 !important;
}
.page {
	background: #2B2E2F !important;
	max-width: 100% !important;
	-webkit-border-radius: 0px !important;
	border: none !important;
	margin-bottom: 0px !important;
	padding: 0 60px !important;
	width: auto !important;
	transform: none !important;
}
.pageStar {
	position: absolute;
	top: 24px;
	right: 48px;
	height: 24px;
	width: 24px;
	background: url('https://cdn.rawgit.com/incace/matFlow/8b045097/assets/star.svg');
	background-size: 20px;
	background-repeat: no-repeat;
	background-position: 7px 6px;
	opacity: 1.0 !important;
	background-color: #383D40;
	padding: 5px;
	border-radius: 100%;
	z-index: 999;
	box-shadow: none;
	-moz-transition: all 250ms ease;
	-o-transition: all 250ms ease;
	-webkit-transition: all 250ms ease;
	transition: all 250ms ease;
	-webkit-transform: scale(1);
	-moz-transform: scale(1);
	-o-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
}
.pageStar:hover {
	-webkit-transform: scale(1.5);
	-moz-transform: scale(1.5);
	-o-transform: scale(1.5);
	-ms-transform: scale(1.5);
	transform: scale(1.5);
}
.pageStar.starred {
	position: absolute;
	top: 24px;
	right: 48px;
	height: 24px;
	width: 24px;
	background: url('https://cdn.rawgit.com/incace/matFlow/8b045097/assets/star.svg');
	background-size: 20px;
	background-repeat: no-repeat;
	background-position: 7px 6px;
	opacity: 1.0 !important;
	background-color: #C55044;
	padding: 5px;
	border-radius: 100%;
	z-index: 999;
	box-shadow: none;
}
.parent > .name {
	line-height: .8em !important;
	margin: 0;
}
.parent > .name > .content {
	color: #667079 !important;
	font-size: 13px !important;
	line-height: 16px !important;
}
.parent > .name > .content:hover {
	color: #A7B4BF !important;
	text-decoration: none !important;
}
.parent > .name > .parentArrow {
	color: #495157 !important;
	line-height: 16px !important;
	font-size: 16px !important;
}
.parent > .name > .parentArrow:before {
	content: "»" !important;
}
.mainTreeRoot.selected {
	border-top: none !important;
}
.mainTreeRoot > .children > .project {
	font-size: 18px !important;
}
.parent.project > .children {
	padding: 0;
}
.selected {
	border-top: none !important;
}
.selected .project > .name {
	margin-bottom: 7px;
}
.selected.project > .children {
	padding: 20px 0 0 0;
}
.selected .project.noted > .name,
.selected .project.open > .name {
	margin-bottom: 0;
}
#expandButton > svg > line {
    stroke: #495157;
}
.selected > .name > #controls > #controlsLeft {
	top: 76px;
	left: 60px !important;
	background: #242627 !important;
}
.selected > .name > #controls > #controlsLeft a {
	font-size: 13px !important;
	font-weight: 700 !important;
	padding: 8px 20px !important;
    text-transform: uppercase;
}
.selected > .name > #controls > #controlsLeft a span {
	margin-right: 0 !important;
}
/* .selected.project > .name,
.selected.project > .notes {
    position: fixed;
    width: 100%;
    z-index: 10;
    top: 100px;
}
.selected.project > .notes {
    top: 168px;
} */
.selected.project > .name {
    color: #FFFFFF !important;
    padding: 32px 60px !important;
    background-color: #242627 !important;
    margin: 10px 0 0 0 !important;
    margin-left: -60px !important;
    margin-right: -60px !important;
    font-size: 28px;
    border-top: 2px solid #383d40;
    border-bottom: 2px solid #383d40;
}
.selected.project.noted > .name {
    padding: 32px 60px 24px !important;
    border-bottom: none !important;
}
div.project.selected > div.name > div > a > span {
    margin-right: 0 !important;
    vertical-align: text-top;
    line-height: 0.5;
}
.selected.project > .name a.contentLink {
    color: #51d087 !important;
    font-size: 14px !important;
    font-weight: 700 !important;
    padding: 6px 8px !important;
    margin: 0 !important;
    vertical-align: top;
    background: #33754f;
}
.selected.project > .name a.contentLink:hover {
    color: #FFFFFF !important;
    border-color: #667079 !important;
}
.selected.project > .notes {
    background-color: #242627 !important;
    padding: 0 60px 16px !important;
    margin: 0 !important;
    margin-left: -60px !important;
    margin-right: -60px !important;
    border-bottom: 2px solid #383d40;
}
.selected.project > .name > .content,
.selected.project.addedShared > .name > .content {
    display: initial;
    padding: 10px 20px;
}
.selected.project > .name > .content {
    background: #27ae60;
}
.selected.project.addedShared > .name > .content {
    background: #d2be2d;
    color: #242627;
}
/* ... */

